--- a/1s/index.html
+++ b/1s/index.html
@@ -6,6 +6,7 @@
 		<meta name="author" content="www.tobie.cn Liangjingxian" />
 		<meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1">
 		<style type="text/css">
+		
 			*{ margin: 0; padding: 0;}
 			html,body{ background: radial-gradient(#F6EFDF,#FFe99f); -webkit-user-select:   none;-moz-user-select:   none; width: 100%; height: 100%;}
 			h1,h2,p{ text-align: center;padding-top: 20px; width: 80%; margin: 0 auto;}
@@ -21,7 +22,7 @@
 		<script type="text/javascript">
 		$(function() {
 			var num = 1;
-			var arr = ["你还差的很远", "差距只在呼吸间", "碉堡了,你是开挂了吧", "人中极品,你可以去瑞士了", "过了，过了", "亲，隐藏数字都被你按出来了"];
+			var arr = ["你还差的很远", "差距只在呼吸间", "碉堡了,你是开挂了吧", "人中极品,你可以去瑞士了", "过了，过了", "亲，隐藏数字都被你按出来了!"];
 			var timer = null;
 			$(".outer").on("touchstart", function() {
 				timer = setInterval(function() {
