--- a/1s/index.html
+++ b/1s/index.html
@@ -22,7 +22,7 @@
 		<script type="text/javascript">
 		$(function() {
 			var num = 1;
-			var arr = ["你还差的很远", "差距只在呼吸间", "碉堡了,你是开挂了吧", "人中极品,你可以去瑞士了", "过了，过了", "亲，隐藏数字都被你按出来了!"];
+			var arr = ["你还差的很远", "差距只在呼吸间", "碉堡了,你是开挂了吧", "人中极品,你可以去瑞士了", "过了，过了", "亲，隐藏数字都被你按出来了"];
 			var timer = null;
 			$(".outer").on("touchstart", function() {
 				timer = setInterval(function() {
