--- a/1s/index.html
+++ b/1s/index.html
@@ -6,7 +6,6 @@
 		<meta name="author" content="www.tobie.cn Liangjingxian" />
 		<meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1">
 		<style type="text/css">
-		
 			*{ margin: 0; padding: 0;}
 			html,body{ background: radial-gradient(#F6EFDF,#FFe99f); -webkit-user-select:   none;-moz-user-select:   none; width: 100%; height: 100%;}
 			h1,h2,p{ text-align: center;padding-top: 20px; width: 80%; margin: 0 auto;}
@@ -21,17 +20,20 @@
 		<script src="js/zepto.min.js"></script>
 		<script type="text/javascript">
 		$(function() {
-			var num = 1;
+			window.onselectstart="return false";
+			window.oncontextmenu="return false";
+			var num = 0;
 			var arr = ["你还差的很远", "差距只在呼吸间", "碉堡了,你是开挂了吧", "人中极品,你可以去瑞士了", "过了，过了", "亲，隐藏数字都被你按出来了"];
 			var timer = null;
-			$(".outer").on("touchstart", function() {
+			$(".outer").on("touchstart", function(ev) {
 				timer = setInterval(function() {
 					num++
 				}, 1)
+				ev.preventDefault();
 			});
 			var str = "";
 			var iEnd = 0;
-			$(".outer").on("touchend", function() {
+			$(".outer").on("touchend", function(ev) {
 				clearInterval(timer);
 				iEnd = num + "" + Math.floor(Math.random() * 10);
 				if (iEnd < 800) {
@@ -48,6 +50,7 @@
 				$("p").html(iEnd / 1000 + "秒" + "<br>" + str);
 				$("p").css("padding-bottom", "20px");
 				num = 0;
+				ev.preventDefault();
 				return false
 			})
 		})
